--- a/ui/index.html
+++ b/ui/index.html
@@ -11,47 +11,63 @@
     <h1>Shorten Your Link</h1>
     <form id="shortenForm">
       <input type="url" id="urlInput" pattern=".*\..*" placeholder="Enter your website URL" required>
-      <button type="submit">Shorten</button>
+      <button id="submit" type="submit">Shorten</button>
     </form>
     <div class="output" id="output"></div>
   </div>
 
   <script>
-    const form = document.getElementById('shortenForm');
+    const button = document.getElementById('submit');
     const output = document.getElementById('output');
 
-    form.addEventListener('submit', function(event) {
+    button.addEventListener('click', function(event) {
       event.preventDefault();
       const url = document.getElementById('urlInput').value;
 
-      var i = 0;
-      let text = ["Shortening. Please wait.",
+      let i = 0;
+      const text = [
+        "Shortening. Please wait.",
         "Shortening. Please wait..",
         "Shortening. Please wait...",
-      ]
+      ];
 
       const loop = setInterval(() => {
-        output.innerHTML = text[i]
-        i = (i + 1) % text.length
-      }, 1000)
+        output.innerHTML = text[i];
+        i = (i + 1) % text.length;
+      }, 1000);
 
-      fetch(`http://localhost:3000/create?url=${url}`, {
-        method: 'POST',
-      }).then(res => {
-          if (res.status !== 200) {
-            throw new Error('Status code ' + res.status + ' - ' + res.statusText)
+      // Hàm thực hiện fetch với retry pattern
+      async function fetchWithRetry(url, options, retries = 3, delay = 1000) {
+        for (let attempt = 1; attempt <= retries; attempt++) {
+          try {
+            const response = await fetch(url, options);
+            if (!response.ok) {
+              throw new Error(`HTTP error! status: ${response.status}`);
+            }
+            return response.json();
+          } catch (error) {
+            console.error(`Attempt ${attempt} failed:`, error.message);
+            if (attempt < retries) {
+              await new Promise((resolve) => setTimeout(resolve, delay)); // Chờ trước khi thử lại
+            } else {
+              throw error; // Ném lỗi nếu hết số lần thử
+            }
           }
-          return res.json()
-        })
-      .then(data => {
-          clearInterval(loop)
-          shortenedUrl = "http://localhost:3000/short/" + data.id;
+        }
+      }
+
+      // Gọi hàm fetchWithRetry
+      fetchWithRetry(`http://localhost:3000/create?url=${url}`, { method: 'POST' })
+        .then((data) => {
+          clearInterval(loop);
+          const shortenedUrl = `http://localhost:3000/short/${data.id}`;
           output.innerHTML = `Shortened URL: <a href="${shortenedUrl}" target="_blank">${shortenedUrl}</a>`;
-      }).catch(error => {
-        clearInterval(loop)
-        console.error(error);
-        output.innerHTML = 'Error shortening the URL. Please try again.';
-      });
+        })
+        .catch((error) => {
+          clearInterval(loop);
+          console.error('Error:', error);
+          output.innerHTML = 'Error shortening the URL. Please try again.';
+        });
     });
   </script>
 </body>
